editor add buttons to open master and slaves

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -4,18 +4,22 @@
     <span>{{filenameStatus}}</span>
   </p>
   <p>Version: {{version | date:'short'}}</p>
+  <button ng-click="openMaster()">Open Master view</button>
+  <button ng-repeat="channel in channels" ng-click="openSlave($index)">Open Slave, {{ channel=='' ? 'default channel' : 'channel '+channel}}</button>
+  <hr>
+  <h2>Edit</h2>
 <form name="experienceForm" ng-submit="save()"> 
   <input type="submit" value="save" ng-disabled="!experienceForm.$dirty">
  {{ experienceForm.$dirty ? 'Has unsaved changes' : 'No changes' }}
- 
-  <h2>General</h2>
+
+  <h3>General</h3>
   <table><tbody>
   <tr><td><label>Name</label></td>
       <td><input type="text" ng-model="name"></td></tr>
   <tr><td><label>Description</label></td>
       <td><input type="text" ng-model="description"></td></tr>
   </tbody></table>
-  <h2>Parameters</h2>
+  <h3>Parameters</h3>
   <table><tbody>
   <tr><td><label>Stream gap (seconds)</label></td>
       <td><input type="number" step="0.01" ng-model="parameters.streamGap"></td></tr>
@@ -33,7 +37,7 @@
 
   </tbody></table>
 
-  <h2>Codes</h2>
+  <h3>Codes</h3>
 
   <ul class="markers">
     <li ng-repeat="marker in markers" ng-controller="MarkerCtrl" class="marker">
