editor add new actions/markers on save; master show keyboard

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -68,9 +68,9 @@
         <li >
           <button ng-click="addAction()">+</button>
           <label>Channel:</label>
-          <input type="text" size="10" ng-model="newActionChannel">
+          <input type="text" size="10" ng-model="marker.newActionChannel">
           <label>URL:</label>
-          <input type="text" ng-model="newActionUrl">
+          <input type="text" ng-model="marker.newActionUrl">
         </li>
       </ul>
       </div>
