fix #13 codetype dropdown in editor

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -64,8 +64,9 @@
         <option value=""></option>
 		<option value="n">n</option>
 		<option value="no">no</option>
-		<option value="no/crle4,">no/crle4</option>
-		<option value="no/crfe4,">no/crle4</option>
+		<option value="no/crle4,">no/crle4,</option>
+		<option value="no/crfe4,">no/crfe4,</option>
+		<option value="mrle0/crle4,">mrle0/crle4,</option>
       </select>
       <input type="text" ng-model="marker.code">
       <label>Title:</label>
@@ -106,8 +107,9 @@
         <option value=""></option>
 		<option value="n">n</option>
 		<option value="no">no</option>
-		<option value="no/crle4,">no/crle4</option>
-		<option value="no/crfe4,">no/crle4</option>
+		<option value="no/crle4,">no/crle4,</option>
+		<option value="no/crfe4,">no/crfe4,</option>
+		<option value="mrle0/crle4,">mrle0/crle4,</option>
       </select>
       <input type="text" ng-model="newMarkerCode">
       <label>Title:</label>
