--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -23,10 +23,14 @@
       <td><input type="text" ng-model="name"></td></tr>
   <tr><td><label>Description</label></td>
       <td><input type="text" ng-model="description"></td></tr>
+  <tr><td><label>Author</label></td>
+      <td><input type="text" ng-model="author"></td></tr>
   <tr><td><label>Midi Input</label></td>
       <td><input type="text" ng-model="parameters.midiInput" placeholder="(none)"></td></tr>
   <tr><td><label>Midi Output</label></td>
       <td><input type="text" ng-model="parameters.midiOutput" placeholder="(none)"></td></tr>
+  <tr><td><label>Record Audio</label></td>
+      <td><input type="checkbox" ng-model="recordAudio"></td></tr>
   </tbody></table>
   <h3>Parameters</h3>
   <table><tbody>
