--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -5,6 +5,13 @@ ul.markers {
   padding: 0;
 }
 
+li.example {
+  list-style-type: none;
+}
+ul.examples {
+  padding: 0;
+}
+
 body {
 	padding-left: 5px;
 	padding-right: 5px;
@@ -13,4 +20,8 @@ body {
 div.var {
 	display: inline-block;
 	padding-right: 6px;
+}
+
+button.disabled, input.disabled{
+	opacity: 0.3;
 }
