first part of notes piano roll (example input)

--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -82,7 +82,7 @@
 		<button ng-click="doneAddExample()" >Done</button>
 		<button ng-click="cancelAddExample()">Cancel</button>
 		<br>
-		
+		<div note-roll notes="addingExampleNotes" time="addingTime"></div>
 	</li>
 
   <h3>Codes</h3>
