--- a/server/public/css/app.css
+++ b/server/public/css/app.css
@@ -25,3 +25,31 @@ div.var {
 button.disabled, input.disabled{
 	opacity: 0.3;
 }
+
+/* note visualisation */
+svg.note-roll {
+	background: #f0f0f0;
+}
+.note-included {
+	fill: #0f0;
+}
+
+.note-discarded {
+	fill: #444;
+	opacity: 0.3;
+}
+
+.time-cursor {
+	stroke: #888;
+	stroke-width: 1;
+}
+
+.code {
+	fill: #000;
+}
+
+.group {
+	stroke: #f00;
+	stroke-width: 1;
+	fill-opacity: 0;
+}
