--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -34,6 +34,14 @@
   </tbody></table>
   <h3>Parameters</h3>
   <table><tbody>
+  <tr><td><label>Minimum Frequency</label></td>
+      <td><input type="number" step="1" ng-model="parameters.minFrequency"></td></tr>
+  <tr><td><label>Maxmimum Frequency</label></td>
+      <td><input type="number" step="1" ng-model="parameters.maxFrequency"></td></tr>
+  <tr><td><label>Minimum Velocity (amplitude)</label></td>
+      <td><input type="number" step="1" ng-model="parameters.minVelocity">(0-127)</td></tr>
+  <tr><td><label>Maxmimum Velocity (amplitude)</label></td>
+      <td><input type="number" step="1" ng-model="parameters.maxVelocity">(0-127)</td></tr>
   <tr><td><label>Maximum gap between note onsets (seconds)</label></td>
       <td><input type="number" step="0.01" ng-model="parameters.streamGap"></td></tr>
   <tr><td><label>Frequency ratio</label></td>
@@ -69,6 +77,7 @@
 			<label>Title:</label> <input type="text" ng-model="example.title">
 			<button ng-click="deleteExample($index)">-</button>
 			<div uib-collapse="isCollapsed">
+				<div note-roll notes="example.rawnotes" parameters="parameters"></div>
 			</div>
 		</li>
 	</ul>
@@ -82,7 +91,7 @@
 		<button ng-click="doneAddExample()" >Done</button>
 		<button ng-click="cancelAddExample()">Cancel</button>
 		<br>
-		<div note-roll notes="addingExampleNotes" time="addingTime"></div>
+		<div note-roll notes="addingExampleNotes" time="addingTime" groups="addingGroups"></div>
 	</li>
 
   <h3>Codes</h3>
