--- a/server/public/partials/experience.html
+++ b/server/public/partials/experience.html
@@ -47,6 +47,8 @@
       <td><input type="number" step="1" ng-model="parameters.maxVelocity"> (0-127)</td></tr>
   <tr><td><label>Maximum gap between note onsets (seconds)</label></td>
       <td><input type="number" step="0.01" ng-model="parameters.streamGap"></td></tr>
+  <tr><td><label>Maximum note duration (seconds)</label></td>
+      <td><input type="number" step="0.01" ng-model="parameters.maxDuration"></td></tr>
   <tr><td><label>Frequency ratio</label></td>
       <td><input type="number" step="0.01" ng-model="parameters.frequencyRatio">
           <span>{{ parameters.frequencyRatio | ratio2interval }}</span></td></tr>
