--- a/server/public/partials/mus-projection.html
+++ b/server/public/partials/mus-projection.html
@@ -1,8 +1,8 @@
 <table><tbody>
-  <tr><td><label>Projection</label></td>
+  <tr><td><label>Projection name</label></td>
       <td><input type="text" ng-model="projection.id"></td></tr>
-  <tr><td><label>Beat Quant.</label></td>
+  <tr><td><label>Beat Quantisation (per beat)</label></td>
       <td><input type="number" step="1" ng-model="projection.countsPerBeat"></td></tr>
-  <tr><td><label>Pitch Quant.</label></td>
+  <tr><td><label>Pitch Quantisation (per semitone)</label></td>
       <td><input type="number" step="1" ng-model="projection.pitchesPerSemitone"></td></tr>
 </tbody></table>
